# newhook

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  newhook.map  push_test.bat
include/: newhook.h
src/: newhook.c  nh_a64.c  nh_a64.h  nh_enter.c  nh_enter.h  nh_errno.h  nh_hook.c  nh_hook.h  nh_hub.c  nh_hub.h  nh_hub_trampo.S  nh_island.c  nh_island.h  nh_linker.c  nh_linker.h  nh_log.h  nh_safe.c  nh_safe.h  nh_soinfo.h  nh_switch.c  nh_switch.h  nh_symbol.c  nh_symbol.h  nh_task.c  nh_task.h  nh_trampo.c  nh_trampo.h  nh_util.c  nh_util.h
test/: test_newhook.c
